--- a/clients/remote.css
+++ b/clients/remote.css
@@ -1,21 +1,156 @@
+body {
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-weight: normal;
+    color: #d8d8d8;
+    background-color: #222;
+    font-size: 16px;
+}
+
 a, a:link, a:active, a:hover, a:visited {
-  color: blue;
-  text-decoration: none;
+    color: #42affa;
+    text-decoration: none;
+    outline: none;
 }
 
-a.pressed, a.pressed:link, a.pressed:active, a.pressed:hover, a.pressed:visited {
-  font-weight: bold;
+.disabled {
+    opacity: 0.07;
+    pointer-events: none;
+    cursor: default;
 }
 
-a.disabled, a.disabled:link, a.disabled:active, a.disabled:hover, a.disabled:visited {
-  font-style: italic;
-  color: gray;
-  pointer-events: none;
-  cursor: default;
+#notes, #buttons, #progress, #menu {
+    transition: 0.3s
+}
+
+#notes {
+    min-height: 100vh;
+    margin-bottom: 30vh;
+}
+
+.collapsed #notes {
+    margin-bottom: 0;
+}
+
+.collapsed #buttons {
+    margin-bottom: 0;
+}
+
+#buttons {
+    position: fixed;
+    height: 30vh;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+
+    background-color: #333;
+    overflow: hidden;
+}
+
+.collapsed #buttons {
+    height: 0;
 }
 
 #progress {
-  height: 3px;
-  background-color: blue;
-  width: 0%;
+    height: 8px;
+    background-color: blue;
+    width: 50%;
+
+    position: fixed;
+    bottom: 30vh;
+    left: 0;
+}
+
+.collapsed #progress {
+    bottom: 0;
+}
+
+#show-button {
+    background-color: #222;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    display: none;
+}
+
+#hide-button {
+    background-color: #333;
+    float: right;
+    display: block;
+}
+
+#show-button, #hide-button {
+    width: 10vh;
+    height: 10vh;
+    font-size: 9vh;
+    text-align: center;
+}
+
+.collapsed #show-button {
+    display: block;
+}
+
+.fa.hidden-active, .button-group a.hidden {
+    display: none;
+}
+
+.pressed .fa.shown-active {
+    display: none;
+}
+
+.pressed .fa.hidden-active {
+    display: inline;
+}
+
+.bottons-inner {
+    height: 100%;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-between;
+
+    text-align: center;
+}
+
+.button-group a {
+    display: inline-block;
+    align-self: center;
+}
+
+.button-group {
+    display: flex;
+    justify-content: space-around;
+    flex-basis: 30%;
+    flex-grow: 1;
+    align-self: center;
+}
+
+#arrows {
+    position: relative;
+    text-align: center;
+}
+
+#arrows a {
+    position: absolute;
+}
+
+#left {
+    left: 10%;
+    top: 50%;
+    margin-top: -25%;
+}
+
+#right {
+    right: 10%;
+    top: 50%;
+    margin-top: -25%;
+}
+
+#up {
+    top: -10%;
+    margin-left: -0.25em;
+}
+
+#down {
+    bottom: 0;
+    margin-left: -0.25em;
 }
