--- a/clients/remote.css
+++ b/clients/remote.css
@@ -80,9 +80,9 @@ a, a:link, a:active, a:hover, a:visited {
 }
 
 #show-button, #hide-button {
-    width: 10vh;
-    height: 10vh;
-    font-size: 9vh;
+    width: 10vw;
+    height: 10vw;
+    font-size: 9vw;
     text-align: center;
 }
 
@@ -134,23 +134,23 @@ a, a:link, a:active, a:hover, a:visited {
 }
 
 #left {
-    left: 10%;
+    left: 0.2em;
     top: 50%;
-    margin-top: -25%;
+    margin-top: -0.5em;
 }
 
 #right {
-    right: 10%;
+    right: 0.2em;
     top: 50%;
-    margin-top: -25%;
+    margin-top: -0.5em;
 }
 
 #up {
-    top: -10%;
-    margin-left: -0.25em;
+    top: -0.25em;
+    margin-left: -0.3em;
 }
 
 #down {
-    bottom: 0;
-    margin-left: -0.25em;
+    bottom: -0.25em;
+    margin-left: -0.3em;
 }
